style : fixed post and caption alignment

--- a/src/Components/PostComponent.module.css
+++ b/src/Components/PostComponent.module.css
@@ -26,7 +26,7 @@
   background-size: 100% 60%;
 }
 img {
-    object-fit: cover;
+  object-fit: cover;
 }
 .imgAndPost {
   width: 100%;
@@ -134,6 +134,6 @@ img {
     height: 28px;
   }
   .imgAndPost {
-    align-items: center;
+    align-items: flex-start;
   }
 }
